--- a/定位.md
+++ b/定位.md
@@ -1,4 +1,4 @@
-var host = 'http://wx.jiehai.tech/checkin'; // 部署地址
+var host = ''; // 部署地址
 var distance = -1; //表示未获取地址
 if(wx) {
     var _strUrl = encodeURIComponent(document.URL);
